Fix bottom safe area whitespace gap on iPhone PWAs

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@
     display: none !important;
   }
 }
+
+.safe-top {
+  padding-top: calc(0.75rem + env(safe-area-inset-top)) !important;
+}
+
+.safe-bottom {
+  padding-bottom: calc(0.75rem + env(safe-area-inset-bottom)) !important;
+}
